# anbox-streaming-sdk

./: .gitignore  CODEOWNERS  README.md  SECURITY.md  trivy.yaml
.github/: CODEOWNERS  pull_request_template.md  renovate.json
.github/actions/setup-anbox-tools/: action.yaml
.github/actions/setup-kev/: action.yaml
.github/actions/setup-osv-scanner/: action.yaml
.github/actions/setup-syft/: action.yaml
.github/actions/setup-trivy/: action.yaml
.github/workflows/: branch.yaml  cache-images.yaml  ci.yaml  cla_check.yaml  e2e.yaml  pr.yaml  release.yaml  security-scan.yaml  tics.yaml  trivy-update.yaml
android/anbox_streaming_sdk/: README.md  build.gradle
android/anbox_streaming_sdk/gradle/wrapper/: gradle-wrapper.properties
android/anbox_streaming_sdk/src/main/: AndroidManifest.xml
android/libs/: com.canonical.anbox.streaming_sdk.aar
examples/android/apks/: com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.11.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.12.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.12.5.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.13.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.13.2-fix1.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.13.2-fix2.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.13.2-fix3.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.13.2.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.14.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.14.1.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.15.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.15.1.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.16.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.17.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.17.1.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.18.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.18.1.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.18.2.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.19.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.19.2.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.20.0.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.20.1.apk  com.canonical.anbox.streaming_sdk.enhanced_webview_example_1.21.0.apk  com.canonical.anboxcloud.outofbandappv2_1.16.0.apk  com.canonical.anboxcloud.outofbandappv2_1.17.0.apk  com.canonical.anboxcloud.outofbandappv2_1.17.1.apk  com.canonical.anboxcloud.outofbandappv2_1.18.0.apk  com.canonical.anboxcloud.outofbandappv2_1.18.1.apk  com.canonical.anboxcloud.outofbandappv2_1.18.2.apk  com.canonical.anboxcloud.outofbandappv2_1.19.0.apk  com.canonical.anboxcloud.outofbandappv2_1.19.2.apk  com.canonical.anboxcloud.outofbandappv2_1.20.0.apk  com.canonical.anboxcloud.outofbandappv2_1.20.1.apk  com.canonical.anboxcloud.outofbandappv2_1.21.0.apk
examples/android/enhanced_webview_streaming/: README.md  settings.gradle
examples/android/enhanced_webview_streaming/app/: build.gradle
examples/android/native_streaming/: .project  README.md  settings.gradle
examples/android/native_streaming/app/src/main/cpp/: CMakeLists.txt  bindings.cpp  jni_helpers.cpp  jni_helpers.h
examples/android/out_of_band/: README.md  settings.gradle
examples/android/out_of_band_v2/: README.md  build.gradle  settings.gradle
examples/android/webview_streaming/: build.gradle  settings.gradle
examples/js/: Dockerfile  README.md  anbox-stream-sdk.js  anime4K.html  example.html  run.sh  serve.py  sgsr.html
examples/js/native/: README.md  example.html
examples/linux/streaming/: CMakeLists.txt  COPYRIGHT  README.md
examples/linux/streaming/src/: CMakeLists.txt  gamepad_manager.cpp  gamepad_manager.h  gateway_messages.cpp  gateway_messages.h  http_client.cpp  http_client.h  json_helpers.h  main.cpp  session.cpp  session.h  string_utils.h
examples/scripts/: build-with-docker.sh  clean-build.sh
js/: README.md  anbox-stream-docs.md  anbox-stream-sdk.js  run-tests.sh  run.sh  serve.py
js/tests/: combined-coverage-report.sh
js/tests/e2e/: .gitignore  eslint.config.mjs  global-setup.js  global-teardown.js  index.html  package-lock.json  package.json  playwright.config.js  run-tests.sh  server.js
js/tests/unit/: .babelrc.json  .eslintrc.yml  callbacks.test.js  eslint.config.mjs  input-events.test.js  package-lock.json  package.json  run-tests.sh  sdk.test.js  sensor-events.test.js  stats.test.js
native/: COPYRIGHT  README.md
native/include/: anbox-stream.h
scripts/: build-with-docker.sh  build.sh  clean-build.sh  compare_kev_vulnerabilities.sh  gen-version.sh  run-tests.sh  setup-gh-ssh.sh  streaming-sdk-files.allowlist  validate.sh
(+67 files in other folders)
